--- a/src/partials/modal-price.html
+++ b/src/partials/modal-price.html
@@ -1,7 +1,7 @@
 <div class="backdrop is-hidden" data-modal >
   <!-- is-hidden -->
   <div class="modal-price">
-      <button type="button" class="modal-price__btn-close" data-modal-close>
+      <button type="button" class="modal-price__btn-close" data-price2l-modal-close>
       <svg class="modal-price__icon-close" width="24" height="24">
           <use href="./images/sprite.svg#icon-close"></use>
       </svg>
@@ -13,54 +13,51 @@
       <form class="form form__modal-price">
         <p class="modal-price__text">Категорія номеру</p>
         <div class="container__form-price">
-          
-          <!-- cast -->
           <div class="wrapper-input">
-            
-            <!-- custom-select -->
-            <div class="modal-price__input-wrap">
+           <div class="modal-price__input-wrap">
               <input
                 type="number"
                 id="number-cast"
                 name="number-cast"              
                 class="modal-price__input input-cast"
-                minlength="2"
+                minlength="1"
                 placeholder="1"
+                min=1
+                pattern="^[0-9]" title="Must be number."
+                value=2
                 required
               />
-             <div class="container__modal-price-select">
-                <select name="number-cast" id="select-cast" class="modal-price__input modal-price__custom-select">
-                  <option value="1">Одна</option>
-                  <option value="2">Дві</option>
-                  <option value="3">Три</option>
-                  <option value="4">Чотири</option>
-                  <option value="5">П'ять</option>
-                </select>
-                <div class="shade"></div>
-              </div>
-              
-  
+
+              <!-- <select name="number-cast" id="select-cast" class="modal-price__input modal-price__custom-select">
+                <option value="1">Одна</option>
+                <option value="2">Дві</option>
+                <option value="3">Три</option>
+                <option value="4">Чотири</option>
+                <option value="5">П'ять</option>
+              </select>      -->
             </div>
+
             <label for="number-cast" class="modal-price__label-input">Кількість ночей</label>
-            <label for="select-cast" class="modal-price__label-select">Кількість ночей</label>
+            <!-- <label for="select-cast" class="modal-price__label-select">Кількість ночей</label> -->
           </div>
   
           <!-- wrapper-input wrapper-last -->
           <div class="wrapper-input">
 
-            <!-- class="modal-price__input-cost" -->
             <div class="modal-price__input-wrap">
               <input
                 type="number"
                 id="number-cost"
                 name="number-cost"
                 class="modal-price__input"
-                minlength="2"
+                minlength="3"
                 placeholder="1000"
+                min=100
+                value=1000
                 required
               />
             </div>
-            <label for="number-cost" class="modal-price__label">грн</label>
+            <label for="number-cost" class="modal-price__label">Завдаток грн</label>
           </div>
         </div>
 
