deleted two unusable classes

--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -6,7 +6,7 @@
 
     <div>
       <div class="kitchen-card">
-        <p class="kitchen-card__description kitchen-card__description--gray">
+        <p class="kitchen-card__description">
           Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
           sint. Velit officia consequat duis enim velit mollit. Exercitation
           veniam consequat sunt nostrud amet.
@@ -71,7 +71,7 @@
           />
         </picture>
 
-        <p class="kitchen-card__description kitchen-card__description--orange">
+        <p class="kitchen-card__description">
           Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
           sint. Velit officia consequat duis enim velit mollit. Exercitation
           veniam consequat sunt nostrud amet.
@@ -237,6 +237,7 @@
           </picture>
         </div>
       </div>
+
       <div class="slider-arrows"></div>
     </div>
   </div>
