--- a/src/partials/pages/room-luxe/amenities.html
+++ b/src/partials/pages/room-luxe/amenities.html
@@ -9,7 +9,7 @@
     </p>
 
     <ul class="list">
-      <li>
+      <li class="title">
         <h3 class="amenities__subtitle">Загальні</h3>
         <div class="amenities__box">
           <p class="amenities__discription">
@@ -26,7 +26,7 @@
           </div>
         </div>
       </li>
-      <li>
+      <li class="title">
         <h3 class="amenities__subtitle">Ванна кімната</h3>
         <div class="amenities__box-second">
           <p class="amenities__discription-additional">
@@ -44,7 +44,7 @@
           </div>
         </div>
       </li>
-      <li>
+      <li class="title">
         <h3 class="amenities__subtitle">Спальня</h3>
         <div class="amenities__box">
           <p class="amenities__discription">
@@ -53,7 +53,7 @@
           </p>
         </div>
       </li>
-      <li>
+      <li class="title">
         <h3 class="amenities__subtitle">Кухня</h3>
         <div class="amenities__box">
           <p class="amenities__discription">
@@ -66,7 +66,7 @@
           </p>
         </div>
       </li>
-      <li>
+      <li class="title">
         <h3 class="amenities__subtitle">Медіа</h3>
         <div class="amenities__box">
           <p class="amenities__discription">
@@ -78,7 +78,9 @@
     </ul>
 
     <div class="button__wrap">
-      <button class="button" data-modal-open>Оформити бронювання</button>
+      <button class="button" data-modal-open>
+        <span>Оформити бронювання </span>
+      </button>
     </div>
     <a href="./hotel.html" class="link__amenities"
       >Повернутися до перегляду номерів
