--- a/src/sass/pages/room-luxe/_amenities.scss
+++ b/src/sass/pages/room-luxe/_amenities.scss
@@ -69,7 +69,9 @@ margin-bottom: 32px;
         }
 
     }
-
+ .title {
+     margin-bottom: 16px;
+ }
     &__subtitle {
         font-family: "TimesNewRoman";
         font-weight: 700;
@@ -78,12 +80,13 @@ margin-bottom: 32px;
         color: $colorBlack;
         text-transform: uppercase;
         
-        margin-bottom: 16px;
+        // margin-bottom: 16px;
 
         @include tablet {
             line-height: 1.15;
 
         }
+       
 
         @media screen and (max-width: 400px) {
             font-size: 20px;
@@ -108,8 +111,13 @@ margin-bottom: 32px;
 
     }
 
+
  button {
-    
+    // border: 1px solid #000;
+    // position: absolute;
+    //     right: 700px;
+    //     text-transform: uppercase;
+    //     width: 30px;
         // background-color: $colorBtnBlack;
         // color: $colorBtnWhite;
         // font-family: 'Montserrat';
@@ -153,9 +161,9 @@ margin-bottom: 32px;
            
         }
 
-        // @include desktop {
+        @include desktop {
          
-        // }
+        }
     }
 
     &__icon {
@@ -207,7 +215,12 @@ margin-bottom: 32px;
         }
 
         @include  desktop {
+            // width: 200px;
+            //     position: relative;
+            //     margin-left: 572px;
+            //     text-align: right;
             gap: 64px;
+          
         }
     }
 }
@@ -243,20 +256,30 @@ margin-bottom: 32px;
     }
 
     @include desktop {
-        margin-left: 563px;
+        // position: relative;
+      
+        // margin-left: 563px;
+        width: 500px;
+        
+            margin-left: 500px;
     }
         transition: color 250ms linear;
         
     
         &:hover,
         &:focus {
-            color: $colorAccentYellow;
+        color: $colorAccentYellow;
 }
 }
 
 .button__wrap {
-    text-align: right;
+    // width: 200px;
+    // position: relative;
+    // margin-left: 572px;
+    // text-align: right;
     margin-bottom: 32px;
-   
-
+    
+}
+.button span{
+    text-transform: uppercase;
 }
