--- a/src/partials/pages/room-luxe/hero.html
+++ b/src/partials/pages/room-luxe/hero.html
@@ -97,18 +97,6 @@
     </div>
   </div>
   <div class="container luxe-hero__container">
-    <a
-      class="luxe-hero__map luxe-hero__map--top"
-      href="https://goo.gl/maps/bBwFzgiCFPFPAu5Y6"
-      target="_blank"
-      rel="noopener noreferrer nofollow"
-      ><svg class="luxe-hero-map__icon" width="10" height="16">
-        <use href="./images/sprite.svg#icon-geo-marker12"></use></svg
-      ><span class="map__adress"
-        >Україна, м. Полтава,<br />
-        вул. Маршала Бірюзова, 15</span
-      ></a
-    >
     <div class="luxe-hero__wpap">
       <h2 class="luxe-hero__tittle">ДВОМІСНИЙ НОМЕР люкс</h2>
       <p class="luxe-hero__text">
@@ -117,7 +105,7 @@
         veniam consequat sunt nostrud amet.
       </p>
       <a
-        class="luxe-hero__map luxe-hero__map--bottom"
+        class="luxe-hero__map"
         href="https://goo.gl/maps/bBwFzgiCFPFPAu5Y6"
         target="_blank"
         rel="noopener noreferrer nofollow"
@@ -167,7 +155,11 @@
         </li>
       </ul>
     </div>
-    <button type="button" class="button luxe-hero__button" data-modal-open>
+    <button
+      type="button"
+      class="button luxe-hero__button"
+      data-price2l-modal-open
+    >
       Переглянути ціни
     </button>
   </div>
