--- a/src/sass/pages/room-luxe/_hero.scss
+++ b/src/sass/pages/room-luxe/_hero.scss
@@ -1,4 +1,15 @@
 .luxe-hero {
+  padding-top: 483px;
+  padding-bottom: 40px;
+  @include tablet {
+    padding-top: 468px;
+    padding-bottom: 64px;
+  }
+  @include desktop {
+    padding-top: 524px;
+    padding-bottom: 48px;
+  }
+
   position: relative;
   background-image: linear-gradient(
     180deg,
@@ -40,18 +51,12 @@
 }
 
 .luxe-hero__container {
-  padding-top: 64px;
-  padding-bottom: 40px;
   @include tablet {
-    padding-top: 468px;
-    padding-bottom: 24px;
     display: flex;
     gap: 191px;
   }
   position: relative;
   @include desktop {
-    padding-top: 683px;
-    padding-bottom: 48px;
     gap: 371px;
   }
 }
@@ -62,7 +67,32 @@
   border-radius: 2px;
   display: flex;
   align-items: center;
+  position: absolute;
+  right: 15px;
+  bottom: 589px;
+  width: 210px;
+  height: 47px;
+  @include font(400, 12px, 1.25, 0.01em);
+  padding-left: 11px;
+  @include tablet {
+    @include font(400, 16px, 1.25, 0.01em);
+    padding-left: 16px;
+    width: 285px;
+    height: 56px;
+    right: 692px;
+    bottom: -40px;
+  }
+  @include desktop {
+    display: none;
+  }
 }
+
+.luxe-hero__map:hover,
+.luxe-hero__map:focus {
+  color: rgba(243, 198, 83, 0.7);
+  transition: color $transDuration $cubic;
+}
+
 .map__adress {
   width: 179px;
   height: 30px;
@@ -78,29 +108,20 @@
     margin-right: 16px;
   }
 }
-.luxe-hero__map--top {
-  @include tablet {
-    display: none;
-  }
-  margin-bottom: 372px;
-  margin-left: auto;
-  width: 210px;
-  height: 47px;
-  @include font(400, 12px, 1.25, 0.01em);
-  padding-left: 11px;
-}
 
 .luxe-hero__tittle {
   font-family: 'Times New Roman';
   @include font(700, 28px, 1.14, 0.05em);
   color: $colorWhite;
   width: 100%;
+  height: 64px;
   @include mobile {
     width: 325px;
   }
   margin-bottom: 14px;
   @include tablet {
     width: 507px;
+    height: 41px;
     white-space: nowrap;
     @include font(700, 36px, 1.14, 0.05em);
     margin-bottom: 24px;
@@ -110,6 +131,7 @@
   @include font(700, 12px, 1.25, 0.02em);
   color: $colorWhite;
   width: 100%;
+  height: 61px;
   @include mobile {
     width: 325px;
   }
@@ -117,20 +139,8 @@
   @include tablet {
     width: 400px;
     @include font(700, 16px, 1.25, 0.02em);
-    margin-bottom: 24px;
-  }
-}
-
-.luxe-hero__map--bottom {
-  @include mobilemax {
-    display: none;
-  }
-  width: 285px;
-  height: 56px;
-  @include font(400, 16px, 1.25, 0.01em);
-  padding-left: 16px;
-  @include desktop {
-    display: none;
+    margin-bottom: 0;
+    height: 83px;
   }
 }
 
@@ -138,17 +148,17 @@
   width: 24px;
   height: 24px;
 }
+
 .luxe-hero__social {
   gap: 8px;
   display: flex;
   flex-direction: column;
   position: absolute;
-  bottom: 14px;
+  bottom: -26px;
   @include tablet {
     flex-direction: row;
     gap: 20px;
     left: 372px;
-    bottom: 38px;
   }
   @include desktop {
     display: none;
@@ -157,7 +167,14 @@
 
 .icon-social--luxe {
   fill: rgba(243, 198, 83, 0.7);
+  transition: fill $transDuration $cubic;
 }
+
+.icon-social--luxe:hover,
+.icon-social--luxe:focus {
+  fill: $colorWhite;
+}
+
 .luxe-hero_soclink {
   width: 24px;
   height: 24px;
@@ -173,6 +190,8 @@
   border: 2px solid $colorWhite;
   @include font(700, 16px, 1.25, 0.02em);
   color: $colorAccentYellow;
+  transition: color $transDuration $cubic;
+  transition: background-color $transDuration $cubic;
   @include tablet {
     margin-left: 0;
     margin-top: 140px;
@@ -210,17 +229,18 @@
 .slider__img {
   height: 755px;
   @include mobile {
-    height: 739px;
+    height: 740px;
   }
   @include tablet {
-    height: 718px;
+    height: 720px;
   }
   @include desktop {
-    height: 901px;
+    height: 720px;
   }
 }
 
 .luxe-left__arrow {
+  cursor: pointer;
   position: absolute;
   top: 350px;
   left: 15px;
@@ -237,6 +257,7 @@
   }
 }
 .luxe-right__arrow {
+  cursor: pointer;
   position: absolute;
   top: 350px;
   right: 15px;
