--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -3,13 +3,15 @@
     width: 100%;
     background-color: $colorBgFooter;
     color: $colorAccentYellow;
+
     @include tablet{
         padding: 80px 0px;
     }
 }
 
 .footer__container{
-    display: flex;    
+    display: flex;
+    // justify-content: space-between;     
 }
 
 .footer__wrapper-lists {
@@ -17,6 +19,7 @@
     flex-direction: column;
     gap: 32px;
     margin-left: 8px;
+
     @include tablet {
         margin-left: 0;
         border: none;
@@ -31,6 +34,9 @@
     align-items: center;
     width: 66%;
     color: inherit;
+
+    transition: color $transDuration $cubic;
+
     @include tablet {
         width: 50%;
         font-size: 64px;
@@ -38,14 +44,24 @@
     }
 }
 
+.footer__logo:hover,
+.footer__logo:focus {
+    color: $colorLogoWhite;
+
+}
+
 .footer__menu {
     display: flex;
     flex-direction: column;
     gap: 16px;
     font-family: 'Montserrat';
-    & a {
-        color: inherit;
-    }
+    
+}
+
+.footer__menu-link {
+    
+    color: inherit;
+    
     @include font (500, 20px, 1.2, .02);
     @include tablet {
         width: 50%;
@@ -63,7 +79,12 @@
     }
 }
 
-.icon-social__footer {
+.footer__social-link {
+
+    color: $colorAccentYellow;
+    transition: color $transDuration $cubic, border $transDuration $cubic;
+
+
     @include tablet{
         display: flex;
         align-items: center;
@@ -72,25 +93,19 @@
         height: 40px;
         border: .5px solid $colorAccentYellow;
         border-radius: 2px;
+
+        padding-left: 12px;
+        padding-right: 10px;
     }
 }
 
-.icon-social__title {
-    display: none;
-    font-weight: 400;
-    line-height: 1.25;
-    color: $colorAccentYellow;
-    @include tablet {
-        display: inline-block;
-        padding-left: 12px;
-    }
+.footer__social-link:hover,
+.footer__social-link:focus {
+    color: $colorLogoWhite;
+    border: .5px solid $colorLogoWhite;
 }
-.icon-social__thumb{
-    height: 24px;
-    @include tablet {
-        padding-right: 12px;
-    }
-}
+
 .icon-social__icon {
-    fill: $colorAccentYellow;
+    fill: currentColor;
+    
 }
