--- a/src/sass/components/_module.scss
+++ b/src/sass/components/_module.scss
@@ -1,10 +1,11 @@
-
-@import "./modal-room.scss";
-@import "./modal-table.scss";
-@import "./modal-price.scss";
-@import "./backdrop";
-@import "./button";
-@import "./container";
-@import "./logo";
-@import "./section-title";
-@import "./section";
+@import './modal-room.scss';
+@import './modal-table.scss';
+@import './modal-price.scss';
+@import './backdrop';
+@import './button';
+@import './container';
+@import './logo';
+@import './section-title';
+@import './section';
+@import './pre-title';
+@import './hotel-text';
