--- a/src/partials/modal-price.html
+++ b/src/partials/modal-price.html
@@ -1,7 +1,7 @@
 <div class="backdrop is-hidden" data-modal >
   <!-- is-hidden -->
   <div class="modal-price">
-      <button type="button" class="modal-price__btn-close" data-price2l-modal-close>
+      <button type="button" class="modal-price__btn-close" data-price-modal-close>
       <svg class="modal-price__icon-close" width="24" height="24">
           <use href="./images/sprite.svg#icon-close"></use>
       </svg>
