--- a/src/partials/about-restaurant.html
+++ b/src/partials/about-restaurant.html
@@ -1,1 +1,243 @@
+<section class="about-our-rest">
+  <div class="container">
+    <h2 class="visually-hidden">About our kitchen</h2>
+    <p class="about-rest__slogan">Amet minim mollit non</p>
+    <h3 class="logo restaurant-logo">MIMIHO</h3>
 
+    <div>
+      <div class="rest-card">
+        <p class="rest-card__description">
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit. Exercitation
+          veniam consequat sunt nostrud amet.
+        </p>
+        <picture class="rest-card__photo">
+          <source
+            srcset="
+              ./images/main/about-restaurant/about-rest-1-desk.jpg    1x,
+              ./images/main/about-restaurant/about-rest-1-desk-2x.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/main/about-restaurant/about-rest-1-tab.jpg    1x,
+              ./images/main/about-restaurant/about-rest-1-tab-2x.jpg 2x
+            "
+            media="(min-width: 1024px)"
+          />
+          <source
+            srcset="
+              ./images/main/about-restaurant/about-rest-1-mob.jpg    1x,
+              ./images/main/about-restaurant/about-rest-1-mob-2x.jpg 2x
+            "
+            media="(min-width: 414px)"
+          />
+          <img
+            src="./images/main/about-restaurant/about-rest-1-mob.jpg"
+            alt="Порожня зала ресторану"
+            sizes="(min-width: 1280px) 460px, (min-width: 1024px) 400px, (min-width: 414px) 244px, 80vw"
+          />
+        </picture>
+      </div>
+
+      <div class="rest-card">
+        <picture class="rest-card__photo">
+          <source
+            srcset="
+              ./images/main/about-restaurant/about-rest-2-desk.jpg    1x,
+              ./images/main/about-restaurant/about-rest-2-desk-2x.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/main/about-restaurant/about-rest-2-tab.jpg    1x,
+              ./images/main/about-restaurant/about-rest-2-tab-2x.jpg 2x
+            "
+            media="(min-width: 1024px)"
+          />
+          <source
+            srcset="
+              ./images/main/about-restaurant/about-rest-2-mob.jpg    1x,
+              ./images/main/about-restaurant/about-rest-2-mob-2x.jpg 2x
+            "
+            media="(min-width: 414px)"
+          />
+          <img
+            src="./images/main/about-restaurant/about-rest-2-mob.jpg"
+            alt="Порожній зал ресторану"
+            sizes="(min-width: 1280px) 460px, (min-width: 1024px) 350px, (min-width: 414px) 200px, 40vw"
+          />
+        </picture>
+
+        <p class="rest-card__description">
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit. Exercitation
+          veniam consequat sunt nostrud amet.
+        </p>
+      </div>
+    </div>
+
+    <div class="rest-slider-box">
+      <div class="rest-slider">
+        <div class="rest-slide">
+          <picture>
+            <source
+              srcset="
+                ./images/sliders/slider-9-desk.jpg    1x,
+                ./images/sliders/slider-9-desk-2x.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-9-tab.jpg    1x,
+                ./images/sliders/slider-9-tab-2x.jpg 2x
+              "
+              media="(min-width: 1024px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-9-mob.jpg    1x,
+                ./images/sliders/slider-9-mob-2x.jpg 2x
+              "
+              media="(min-width: 414px)"
+            />
+            <img
+              class="autoplay__photo"
+              src="./images/sliders/slider-9-mob.jpg"
+              alt="гарно сервірований стіл на вулиці"
+              sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
+            />
+          </picture>
+        </div>
+        <div class="rest-slide">
+          <picture>
+            <source
+              srcset="
+                ./images/sliders/slider-15-desk.jpg    1x,
+                ./images/sliders/slider-15-desk-2x.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-15-tab.jpg    1x,
+                ./images/sliders/slider-15-tab-2x.jpg 2x
+              "
+              media="(min-width: 1024px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-15-mob.jpg    1x,
+                ./images/sliders/slider-15-mob-2x.jpg 2x
+              "
+              media="(min-width: 414px)"
+            />
+            <img
+              class="autoplay__photo"
+              src="./images/sliders/slider-15-mob.jpg"
+              alt="гарно сервірований стіл у приміщенні"
+              sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
+            />
+          </picture>
+        </div>
+        <div class="rest-slide">
+          <picture>
+            <source
+              srcset="
+                ./images/main/about-restaurant/about-rest-3-desk.jpg    1x,
+                ./images/main/about-restaurant/about-rest-3-desk-2x.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./images/main/about-restaurant/about-rest-3-tab.jpg    1x,
+                ./images/main/about-restaurant/about-rest-3-tab-2x.jpg 2x
+              "
+              media="(min-width: 1024px)"
+            />
+            <source
+              srcset="
+                ./images/main/about-restaurant/about-rest-3-mob.jpg    1x,
+                ./images/main/about-restaurant/about-rest-3-mob-2x.jpg 2x
+              "
+              media="(min-width: 414px)"
+            />
+            <img
+              class="autoplay__photo"
+              src="./images/main/about-restaurant/about-rest-3-mob.jpg"
+              alt="Келих вина у руці"
+              sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
+            />
+          </picture>
+        </div>
+        <div class="rest-slide">
+          <picture>
+            <source
+              srcset="
+                ./images/sliders/slider-7-desk.jpg    1x,
+                ./images/sliders/slider-7-desk-2x.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-7-tab.jpg    1x,
+                ./images/sliders/slider-7-tab-2x.jpg 2x
+              "
+              media="(min-width: 1024px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-7-mob.jpg    1x,
+                ./images/sliders/slider-7-mob-2x.jpg 2x
+              "
+              media="(min-width: 414px)"
+            />
+            <img
+              class="autoplay__photo"
+              src="./images/sliders/slider-7-mob.jpg"
+              alt="устриці та шампанське"
+              sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
+            />
+          </picture>
+        </div>
+        <div class="rest-slide">
+          <picture>
+            <source
+              srcset="
+                ./images/sliders/slider-16-desk.jpg    1x,
+                ./images/sliders/slider-16-desk-2x.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-16-tab.jpg    1x,
+                ./images/sliders/slider-16-tab-2x.jpg 2x
+              "
+              media="(min-width: 1024px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-16-mob.jpg    1x,
+                ./images/sliders/slider-16-mob-2x.jpg 2x
+              "
+              media="(min-width: 414px)"
+            />
+            <img
+              class="autoplay__photo"
+              src="./images/sliders/slider-16-mob.jpg"
+              alt="сніданок у ліжко"
+              sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
+            />
+          </picture>
+        </div>
+      </div>
+      <div class="slider-arrows"></div>
+    </div>
+  </div>
+</section>
