--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -2,6 +2,7 @@
 // COMMON COLORS
 
 $colorAccentYellow: #F3C653; 
+$colorBrown: #C79002; 
 $colorWhite: #FFFFFF; 
 $colorBlack: #000000; 
 
@@ -30,12 +31,8 @@ $colorLogoGray: #494848;
 
 $colorBgLemon: #FFFDEE; 
 $colorBgDarkLemon: #F0ECD6; 
-$colorBrown: #C79002; 
-$colorBgHeader: rgba(0, 0, 0, 0.65); 
-$colorShadowHeader: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+$colorBgHero: rgba(0, 0, 0, 0.65); 
 $colorBgFooter: #0E0C07; 
-$colorBgHeader: #D9D9D9;
-$colorBgImage: #DADADA; 
 
 
 // BUTTONS COLORS 
