--- a/src/partials/about-restaurant.html
+++ b/src/partials/about-restaurant.html
@@ -1,6 +1,6 @@
 <section class="about-our-rest">
   <div class="container">
-    <h2 class="visually-hidden">About our kitchen</h2>
+    <h2 class="visually-hidden">About our restaurant</h2>
     <p class="about-rest__slogan">Amet minim mollit non</p>
     <h3 class="logo restaurant-logo">MIMIHO</h3>
 
