--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,14 +2,14 @@
     <div class="container footer__container">
         <a href="./index.html" class="logo footer__logo">MIMIHO</a> 
         <div class="footer__wrapper-lists">
-            <ul class="footer__menu">
+            <ul class="footer__menu list">
                 <li class="footer__menu-item"><a class="footer__menu-link" href="./index.html">Головна</a> </li>
                 <li class="footer__menu-item"><a class="footer__menu-link" href="./restaurant.html">Ресторан</a></li>
                 <li class="footer__menu-item"><a class="footer__menu-link" href="./hotel.html">Готель</a></li>
             </ul>
-            <ul class="footer__social "> 
+            <ul class="footer__social list"> 
                 <li>
-                    <a class="footer__social-link link" href="https://www.instagram.com/">Instagram
+                    <a class="footer__social-link link" href="https://www.instagram.com/"><span class="footer__social-name">Instagram</span> 
                         <svg class="icon-social__icon" width="24" height="24">
                             <use
                             href="./images/sprite.svg#icon-instagram"
@@ -18,7 +18,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="footer__social-link link" href="https://www.facebook.com/">Facebook
+                    <a class="footer__social-link link" href="https://www.facebook.com/"><span class="footer__social-name">Facebook</span> 
                         <svg class="icon-social__icon" width="24" height="24">
                             <use
                             href="./images/sprite.svg#icon-facebook"
@@ -27,7 +27,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="footer__social-link link" href="https://web.telegram.org">Telegram
+                    <a class="footer__social-link link" href="https://web.telegram.org"><span class="footer__social-name">Telegram</span> 
                         <svg class="icon-social__icon" width="24" height="24">
                             <use
                             href="./images/sprite.svg#icon-telegram"
