--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -11,20 +11,20 @@
 
 .footer__container{
     display: flex;
-    // justify-content: space-between;     
+         
 }
 
 .footer__wrapper-lists {
     display: flex;
     flex-direction: column;
     gap: 32px;
-    margin-left: 8px;
+    // margin-left: 8px;
 
     @include tablet {
         margin-left: 0;
         border: none;
         flex-direction: row;
-        width: 50%;
+        gap: 137px;
     }
 }
 
@@ -55,18 +55,27 @@
     flex-direction: column;
     gap: 16px;
     font-family: 'Montserrat';
+
     
 }
 
 .footer__menu-link {
     
     color: inherit;
+
+    transition: color $transDuration $cubic;
     
     @include font (500, 20px, 1.2, .02);
+
     @include tablet {
         width: 50%;
-        padding-left: 8px;
+        // padding-left: 8px;
     }
+}
+
+.footer__menu-link:focus,
+.footer__menu-link:hover {
+    color: $colorWhite;
 }
 
 .footer__social{
@@ -74,7 +83,7 @@
     gap: 20px;
     @include tablet {
         flex-direction: column-reverse;
-        padding-left: 8px;
+        // padding-left: 8px;
         gap: 12px;
     }
 }
@@ -82,7 +91,7 @@
 .footer__social-link {
 
     color: $colorAccentYellow;
-    transition: color $transDuration $cubic, border $transDuration $cubic;
+    transition: color $transDuration $cubic, border-color $transDuration $cubic;
 
 
     @include tablet{
@@ -102,7 +111,18 @@
 .footer__social-link:hover,
 .footer__social-link:focus {
     color: $colorLogoWhite;
-    border: .5px solid $colorLogoWhite;
+    
+    @include tablet {
+        border-color: $colorLogoWhite;
+    }
+}
+
+.footer__social-name {
+    display: none;
+
+    @include tablet {
+        display: block;
+    }
 }
 
 .icon-social__icon {
