--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -33,6 +33,7 @@ $colorBgLemon: #FFFDEE;
 $colorBgDarkLemon: #F0ECD6; 
 $colorBgHero: rgba(0, 0, 0, 0.65); 
 $colorBgFooter: #0E0C07; 
+$colorBgImage: #DADADA;
 
 
 // BUTTONS COLORS 
