--- a/src/sass/layout/_about-restaurant.scss
+++ b/src/sass/layout/_about-restaurant.scss
@@ -135,7 +135,7 @@
 }
 
 .rest-card__photo {
-  background: $colorBgLemon;
+  background: $colorBgImage;
   box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
   border-radius: 2px;
 }
