--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -119,7 +119,7 @@
 }
 
 .kitchen-card__photo {
-  background: $colorBgLemon;
+  background: $colorBgImage;
   box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
   border-radius: 2px;
 }
