correct mistake after code review

--- a/src/partials/pages/hotel/room-for-3.html
+++ b/src/partials/pages/hotel/room-for-3.html
@@ -2,11 +2,9 @@
   <div class="room-for-3__container container">
     <div class="room-for-3__wrap">
       <p class="room-for-3__pre-title">Amet minim mollit non</p>
-      <div class="room-for-3-logo__wrap">
-        <span class="room-for-3__logo logo">MIMIHO</span>
-      </div>
+      <span class="room-for-3__logo logo">MIMIHO</span>
       <h2 class="room-for-3__title hotel-title">Трьохмісний номер</h2>
-      <p class="room-for-3__after-title">
+      <p class="room-for-3__text">
         Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
         sint. Velit officia consequat duis enim velit mollit. Exercitation
         veniam consequat sunt nostrud amet.
@@ -69,7 +67,7 @@
             />
             <img
               src="./images/hotel/hotel-2-desk.jpg"
-              alt="ванна кімната"
+              alt="раковина біла"
               sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
             />
           </picture>
@@ -128,7 +126,7 @@
               />
               <img
                 src="./images/sliders/slider-2-desk.jpg"
-                alt="краєвид з вікна"
+                alt="ванна"
                 sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
               />
             </picture>
@@ -158,7 +156,7 @@
               />
               <img
                 src="./images/sliders/slider-4-desk.jpg"
-                alt="краєвид з вікна"
+                alt="раковина з чорним краном"
                 sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
               />
             </picture>
@@ -188,7 +186,7 @@
               />
               <img
                 src="./images/sliders/slider-10-desk.jpg"
-                alt="краєвид з вікна"
+                alt="крема та полотенце"
                 sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
               />
             </picture>
@@ -218,7 +216,7 @@
               />
               <img
                 src="./images/sliders/slider-12-desk.jpg"
-                alt="краєвид з вікна"
+                alt="раковина з чорним милом"
                 sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
               />
             </picture>
@@ -248,12 +246,11 @@
               />
               <img
                 src="./images/sliders/slider-13-desk.jpg"
-                alt="краєвид з вікна"
+                alt="раковина сіра"
                 sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
               />
             </picture>
           </div>
-          <div class="slider-show"></div>
         </div>
         <div class="room-for-3-svg">
           <svg class="room-for-3-svg__left prev" width="32" height="32">
