--- a/src/sass/pages/hotel/_room-for-3.scss
+++ b/src/sass/pages/hotel/_room-for-3.scss
@@ -13,7 +13,7 @@
 
 .room-for-3__pre-title {
   font-family: 'Times New Roman';
-  @include font(400, 20px, 1.15, null);
+  @include font(400, 20px, null, null);
   margin-bottom: 8px;
   color: $colorTextHotel;
   @include tablet {
@@ -22,21 +22,16 @@
   }
 }
 
-.room-for-3-logo__wrap {
-  margin-bottom: 32px;
-  @include tablet {
-    margin-bottom: 62px;
-  }
-  @include desktop {
-    margin-bottom: 72px;
-  }
-}
-
 .room-for-3__logo {
+  margin-bottom: 32px;
   margin-right: -0.3em;
   color: $colorLogoGray;
   @include tablet {
+    margin-bottom: 62px;
     @include font(null, 64px, 1.08, null);
+  }
+  @include desktop {
+    margin-bottom: 72px;
   }
 }
 
@@ -55,7 +50,7 @@
   }
 }
 
-.room-for-3__after-title {
+.room-for-3__text {
   margin-right: calc(74px - 15px);
   width: 242px;
   margin-bottom: 32px;
@@ -73,7 +68,10 @@
 }
 
 .room-for-3__center {
+  display: inline-block;
   margin-bottom: 32px;
+  box-shadow: 5px 5px 70px 17px rgba(0, 0, 0, 0.25);
+  border-radius: 2px;
   @include tablet {
     position: absolute;
     top: -96px;
@@ -110,14 +108,14 @@
 .room-for-3__bathroom {
   display: flex;
   gap: 16px;
-  width: calc((194px + 16px) * 7);
   @include tablet {
-    width: calc((194px + 40px) * 7);
     gap: 40px;
   }
-  @include tablet {
-    width: calc((254px + 40px) * 7);
-  }
+}
+
+.room-for-3__bathroom img {
+  border-radius: 2px;
+  box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
 }
 
 .room-for-3-btn__wrap {
@@ -152,8 +150,7 @@
   }
   @include desktop {
     bottom: -28%;
-    right: 41%;
-    fill: $colorTextModal;
+    right: 40%;
   }
 }
 
