--- a/src/partials/details-restaurant.html
+++ b/src/partials/details-restaurant.html
@@ -74,7 +74,8 @@
       <div class="details-rest__wrap-btn">
         <button
           type="button"
-          class="btn btn--hotel-and-rest details-rest__button data-modal-open"
+          class="btn btn--hotel-and-rest details-rest__button"
+          data-modal-open
         >
           Забронювати столик
         </button>
