fix modal adress

--- a/src/partials/pages/hotel/room-for-3.html
+++ b/src/partials/pages/hotel/room-for-3.html
@@ -270,7 +270,7 @@
         <button
           type="button"
           class="room-for-3-btn__price btn btn--hotel-and-rest"
-          data-price3-modal-open
+          data-price3r-modal-open
         >
           Переглянути ціни
         </button>
