fix modal error

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -12,8 +12,7 @@
               class="contacts__phone color-adress--desktop"
               href="tel:+380955559533"
               ><svg class="phone__icon" width="12" height="20">
-                <use href="./images/sprite.svg#icon-phone"></use></svg
-              >095 555 95 33</a
+                <use href="./images/sprite.svg#icon-phone"></use></svg>095 555 95 33</a
             >
           </li>
           <li class="contacts__item contacts__item--hotel">
@@ -23,8 +22,7 @@
                 class="contacts__hotel-phone contacts__phone--first color-adress--desktop"
                 href="tel:+380668491089"
                 ><svg class="phone__icon" width="12" height="20">
-                  <use href="./images/sprite.svg#icon-phone"></use></svg
-                >066 849 10 89</a
+                  <use href="./images/sprite.svg#icon-phone"></use></svg>066 849 10 89</a
               >
               <a
                 class="contacts__hotel-phone color-adress--desktop"
@@ -40,8 +38,7 @@
               target="_blank"
               rel="noopener noreferrer nofollow"
               ><svg class="contacts__icon" width="12" height="20">
-                <use href="./images/sprite.svg#icon-geo-marker12"></use></svg
-              ><span class="map__text"
+                <use href="./images/sprite.svg#icon-geo-marker12"></use></svg><span class="map__text"
                 >Україна, м. Полтава, вул. Маршала Бірюзова, 15</span
               ></a
             >
