--- a/src/partials/pages/room-luxe/hero.html
+++ b/src/partials/pages/room-luxe/hero.html
@@ -110,8 +110,7 @@
         target="_blank"
         rel="noopener noreferrer nofollow"
         ><svg class="luxe-hero-map__icon" width="12" height="20">
-          <use href="./images/sprite.svg#icon-geo-marker12"></use></svg
-        ><span class="map__adress"
+          <use href="./images/sprite.svg#icon-geo-marker12"></use></svg><span class="map__adress"
           >Україна, м. Полтава,<br />
           вул. Маршала Бірюзова, 15</span
         ></a
@@ -157,9 +156,7 @@
     </div>
     <button
       type="button"
-      class="button luxe-hero__button"
-      data-price2l-modal-open
-    >
+      class="button luxe-hero__button" data-modal-open>
       Переглянути ціни
     </button>
   </div>
