--- a/src/sass/pages/room-luxe/_hero.scss
+++ b/src/sass/pages/room-luxe/_hero.scss
@@ -223,9 +223,9 @@
   z-index: 1;
 }
 
-.slick-list {
-  z-index: -1;
-}
+// .slick-list {
+//   z-index: -1;
+// }
 .slider__img {
   height: 755px;
   @include mobile {
