--- a/src/partials/details-restaurant.html
+++ b/src/partials/details-restaurant.html
@@ -72,7 +72,7 @@
         </div>
       </div>
       <div class="details-rest__wrap-btn">
-        <button type="button" class="btn details-rest__button data-modal-open">
+        <button type="button" class="btn details-rest__button">
           Забронювати столик
         </button>
         <a class="btn details-rest__link" href="./restaurant.html"
