--- a/src/partials/pages/restaurant/menu.html
+++ b/src/partials/pages/restaurant/menu.html
@@ -227,7 +227,7 @@
     </table>
 
     <div class="menu__wrap">
-      <button class="menu__button btn" type="button" data-modal-open>
+      <button class="menu__button btn" type="button">
         Забронювати столик
       </button>
     </div>
