--- a/src/partials/pages/hotel/room-for-2.html
+++ b/src/partials/pages/hotel/room-for-2.html
@@ -71,7 +71,6 @@
                 sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
             /></picture>
           </div>
-
           <div>
             <picture
               ><source
@@ -98,7 +97,6 @@
                 sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
             /></picture>
           </div>
-
           <div>
             <picture
               ><source
@@ -125,7 +123,6 @@
                 sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
             /></picture>
           </div>
-
           <div>
             <picture
               ><source
@@ -152,7 +149,6 @@
                 sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
             /></picture>
           </div>
-
           <div>
             <picture
               ><source
@@ -179,7 +175,6 @@
                 sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
             /></picture>
           </div>
-
           <div>
             <picture
               ><source
@@ -206,7 +201,6 @@
                 sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
             /></picture>
           </div>
-
           <div>
             <picture
               ><source
@@ -233,21 +227,18 @@
                 sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
             /></picture>
           </div>
-
-          <div class="room-svg">
-            <svg class="room-svg-left prev" width="32" height="32">
-              <use href="./images/sprite.svg#icon-cil_arrow-left32"></use>
-            </svg>
-            <svg class="room-svg-right next" width="32" height="32">
-              <use href="./images/sprite.svg#icon-cil_arrow-right32"></use>
-            </svg>
-          </div>
+        </div>
+        <div class="room-svg">
+          <svg class="room-svg-left prev" width="32" height="32">
+            <use href="./images/sprite.svg#icon-cil_arrow-left32"></use>
+          </svg>
+          <svg class="room-svg-right next" width="32" height="32">
+            <use href="./images/sprite.svg#icon-cil_arrow-right32"></use>
+          </svg>
         </div>
       </div>
       <div class="room-wrap-bottom">
-        <a href="./room-for-2.html" class="btn btn--hotel-and-rest hotel-link"
-          >Детальніше</a
-        >
+        <a href="" class="btn btn--hotel-and-rest hotel-link">Детальніше</a>
         <button
           type="button"
           class="btn btn--hotel-and-rest"
