add transition fill

--- a/src/sass/pages/hotel/_room-for-2.scss
+++ b/src/sass/pages/hotel/_room-for-2.scss
@@ -129,6 +129,8 @@
 
 .room-svg-left {
   margin-right: 34px;
+  transition: fill $transDuration $cubic;
+
   &:hover,
   &:focus {
     fill: $colorAccentYellow;
@@ -136,6 +138,8 @@
 }
 
 .room-svg-right {
+  transition: fill $transDuration $cubic;
+
   &:hover,
   &:focus {
     fill: $colorAccentYellow;
